feat(cli): hook up media server flow
